classDiagram
    App .. Database
    App .. Session
    App .. CustomException
    App .. Command
    CustomException : + virtual string what() = 0
    CustomException <-- BadRequestException 
    CustomException <-- NotFoundException 
    CustomException <-- PermissionDeniedException
    CustomException <-- EmptyException
    CustomException <-- FileNotFound
    Command : - int min_num_of_args
    Command : - int max_num_of_args
    Command : - validate_num_of_args()
    Command : - executer exec
    Command : + virtual execute(db, session, args) = 0
    App : Datbase* db
    App : Session* cookie
    App : vector<Command*> commands
    Session : + get_current_user()
    Session : + get_current_week()
    Session : + is_transfer_window_on()
    Session : - current_account
    Session : - current_week
    Session : - is_transfer_window_on
    Database : - players[]
    Database : - matches[]
    Database : - clubs[]
    Database : - accounts[]
    Database .. Player
    Database .. Match
    Database .. Club
    Database .. Account
    Player .. PlayerStats
    PlayerStats : - bool injured
    PlayerStats : - bool yellow_card
    PlayerStats : - bool red_card
    PlayerStats : - double score
    Player : - string name
    Player : - Club* team
    Player : - POSITION position
    Player : - int total_points
    Player : - int curr_week_points
    Player : - player_stats[]
    Match : - Club* home
    Match : - Club* away
    Match : - pair<int, int> result
    Match : - int week
    Club : - string name
    Account : - string team_name
    Account : - string password
    Account : - vector<Player*> squad[]
    Account : - int total_points